# ChessV2

./: .gitignore  CMakeLists.txt
Tests/: BoardTest.cpp  CMakeLists.txt
scripts/: loadExternals.py
src/: Board.cpp  Board.h  BoardValues.h  CMakeLists.txt  ChessV2.cpp  ChessV2.h  DebugPrints.cpp  DebugPrints.h  DepthSearch.cpp  DepthSearch.h  DraggedPiece.cpp  DraggedPiece.h  Move.h  MoveGeneration.cpp  MoveGeneration.h  main.cpp
src/Texture/: TextureIndices.h  TextureLoader.cpp  TextureLoader.h
